[package]
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"
name = "trej"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.15", default-features = false, features = ["crossterm-backend"]}
jack = "0.6.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
