[package]
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"
name = "trej"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.6.5"
serde = {version = "1.0", features = ["derive"]}
crossterm = "0.18"
toml = "0.5"
thiserror = "1.0"