[package]
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"
name = "trej"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
jack = "0.6.5"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
toml = "0.5"
tui = {version = "0.12", default-features = false, features = ["crossterm"]}
notify = "5.0.0-pre.3"